Fixed the global div covering up everything, and dragging messing up the boundaries on the embed.

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -290,14 +290,12 @@ body {
 #global {
 	position: absolute;
 	z-index: 1000;
-	width: 100%;
-	height: 100%;
 }
 
 #video-embed {
 	position: absolute;
-	right: -20px;
-	bottom: 50px;
+	left: 900px;
+	top: 350px;
 	
 	box-shadow: 3px 3px 5px #aaa;
 	
